add get list openapi
